Bug 65277 - FILESAVE: Strikethrough lost after saving & reopening file
Summary: FILESAVE: Strikethrough lost after saving & reopening file
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
3.6.6.2 release
Hardware: x86 (IA32) All
: medium normal
Assignee: Katarina Behrens
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-03 02:48 UTC by ign_christian
Modified: 2014-04-14 14:55 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Test PPT file (71.50 KB, application/vnd.ms-powerpoint)
2013-06-03 02:48 UTC, ign_christian
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ign_christian 2013-06-03 02:48:02 UTC
Created attachment 80177 [details]
Test PPT file

Steps to reproduce:
1. Open PPT file attached
2. Format words on each paragraph:
Mark all word on each paragraph > right click > Character > Strikethrough (according to what is written on each paragraph)
3. Save, close, & reopen file
4. See that all Strikethrough lost

This also happen using PPTX file, but on ODP it's not happen.

Tested on LO 4.0.4.1 (Win7 32bit)
Comment 1 Jacques Guilleron 2013-06-10 09:05:13 UTC
Hello,

I confirm these character formats are never kept using pptx file.
LO 4.2.0.0.alpha0+ Build ID: 3e6853ae3e093b919ff3732e8fac05cb0a0fba5
LO 3.6.6.2 Portable
Windows 7 Home Premium

Jacques Guilleron
Comment 2 ign_christian 2014-04-13 14:26:49 UTC
Same behavior on LO 4.2.3.3 (Ubuntu 12.04 x86)

Change Platform to: All
Comment 3 Commit Notification 2014-04-14 14:08:48 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4688a4d4fb74cab711ab19743a6783d925626eb1

fdo#65277: Export text run strikeout property



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 David Tardon 2014-04-14 14:37:05 UTC
(In reply to comment #0)
> Created attachment 80177 [details]
> Test PPT file
> 
> Steps to reproduce:
> 1. Open PPT file attached
> 2. Format words on each paragraph:
> Mark all word on each paragraph > right click > Character > Strikethrough
> (according to what is written on each paragraph)
> 3. Save, close, & reopen file
> 4. See that all Strikethrough lost

It is lost because PPT does not support strikethrough. PPTX does, but it only allows single and double line.
Comment 5 ign_christian 2014-04-14 14:55:24 UTC
Hi David..
I just know that it's not supported. In my country many people still using MSO 97-2003, so it's nice to see basic functions supported in those format (PPT in this case).

Btw thanks for the fix Katarina.. :D