fdo#65277: Export text run strikeout property

Change-Id: Id5bd7649a8ffaaf03099bfeab42ea4456ef718ec
Reviewed-on: https://gerrit.libreoffice.org/8925
Tested-by: David Tardon <dtardon@redhat.com>
Reviewed-by: David Tardon <dtardon@redhat.com>